[package]
name = "cuda-lock"
version = "0.1.0"
edition = "2021"
description = "Distributed locking with deadlock detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-lock"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

